# corecraft

./: .coverage  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCKER_INFRASTRUCTURE_IMPROVEMENTS.md  Makefile  PROJECT_STATUS.md  README.en-US.md  README.md  SECURITY.md  docker-compose.cloudflare.yml  docker-compose.yml  mypy-atividade-1.ini  mypy-atividade-2.ini  mypy-atividade-3.ini  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  deploy.yml  release.yml
atividade-1/: .env.example  Dockerfile  README.md
atividade-1/frontend/: app.js  index.html  package-lock.json  package.json  styles.css
atividade-2/: .env.example  Dockerfile  README.md
atividade-2/backend/: requirements.txt
atividade-2/frontend/: app.js  index.html  package-lock.json  package.json  styles.css
atividade-3/: Dockerfile  README.md
atividade-3/backend/: requirements.txt
atividade-3/frontend/: app.js  index.html  package-lock.json  package.json  styles.css
docs/: README.md  architecture.md  demo-publica.md  deploy-cloudflare-tunnel.md  deploy-vps.md  docker-stack.md  docker-troubleshooting.md  entrega.md  getting-started.md  rpc-zmq.md  setup-bitcoin-core.md  smoke-tests.md  validacao-ao-vivo.md
docs/assets/: README.md
docs/en-US/: architecture.md  delivery.md  deploy-cloudflare-tunnel.md  deploy-vps.md  docker-stack.md  docker-troubleshooting.md  getting-started.md  live-validation.md  setup-bitcoin-core.md  smoke-tests.md
docs/pt-BR/: architecture.md  delivery.md  deploy-cloudflare-tunnel.md  (+9 more)
scripts/: capture-dashboard-screenshots.py  quickstart.sh  setup-linux.sh  setup-mac.sh  setup-windows.bat  setup-windows.ps1  smoke-test.sh
tests/: conftest.py  test_observability.py
(+43 files in other folders)
