[project]
name = "corecraft"
version = "1.0.0"
description = "Bitcoin Core regtest microservices for CoreCraft activities."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
  ".venv",
  "atividade-1/backend/.venv",
  "atividade-2/backend/.venv",
  "atividade-3/backend/.venv",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  "atividade-1/backend",
  "atividade-2/backend",
  "atividade-3/backend",
]
