[project]
name = "corecraft"
version = "1.0.0"
description = "Bitcoin Core regtest microservices for CoreCraft activities."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
  ".venv",
  "atividade-1/backend/.venv",
  "atividade-2/backend/.venv",
  "atividade-3/backend/.venv",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=atividade-1/backend/app --cov=atividade-2/backend/app --cov=atividade-3/backend/app --cov-report=term-missing --cov-fail-under=70"

[tool.coverage.run]
branch = true
source = [
  "atividade-1/backend/app",
  "atividade-2/backend/app",
  "atividade-3/backend/app",
]
omit = [
  "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
